--- a/2021/sandbox.ipynb
+++ b/2021/sandbox.ipynb
@@ -7,49 +7,124 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import numpy as np"
+    "import numpy as np\n",
+    "import re"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "id": "6de62617-2945-4ee4-b193-98cdcd549bfe",
+   "execution_count": 115,
+   "id": "0d51505e-1634-4240-b70a-2535faa862cb",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "102,578 -> 363,317\n",
+      "536,470 -> 536,863\n",
+      "578,460 -> 203,835\n",
+      "42,859 -> 247,859\n",
+      "618,147 -> 147,618\n",
+      "119,31\n"
+     ]
+    }
+   ],
+   "source": [
+    "f = open('./data/day5.txt', 'r')\n",
+    "data = f.read()\n",
+    "print(data[:100])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 132,
+   "id": "c590816c-dab5-4b7f-a736-214dac86db45",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data = \"\"\"0,9 -> 5,9\n",
+    "8,0 -> 0,8\n",
+    "9,4 -> 3,4\n",
+    "2,2 -> 2,1\n",
+    "7,0 -> 7,4\n",
+    "6,4 -> 2,0\n",
+    "0,9 -> 2,9\n",
+    "3,4 -> 1,4\n",
+    "0,0 -> 8,8\n",
+    "5,5 -> 8,2\"\"\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 135,
+   "id": "d9ef005d-7ea2-4715-b801-fd0c2dbf51e2",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['7,4,9,5,11,17,23,2,0,14,21,24,10,16,13,6,15,25,12,22,18,20,8,19,3,26,1',\n",
-       " '',\n",
-       " '22 13 17 11  0',\n",
-       " ' 8  2 23  4 24',\n",
-       " '21  9 14 16  7',\n",
-       " ' 6 10  3 18  5',\n",
-       " ' 1 12 20 15 19',\n",
-       " '',\n",
-       " ' 3 15  0  2 22',\n",
-       " ' 9 18 13 17  5',\n",
-       " '19  8  7 25 23',\n",
-       " '20 11 10 24  4',\n",
-       " '14 21 16 12  6',\n",
-       " '',\n",
-       " '14 21 17 24  4',\n",
-       " '10 16 15  9 19',\n",
-       " '18  8 23 26 20',\n",
-       " '22 11 13  6  5',\n",
-       " ' 2  0 12  3  7']"
+       "{'9-0': 2,\n",
+       " '9-1': 2,\n",
+       " '9-2': 1,\n",
+       " '9-3': 1,\n",
+       " '9-4': 1,\n",
+       " '0-7': 1,\n",
+       " '1-7': 1,\n",
+       " '2-7': 1,\n",
+       " '3-7': 1}"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 135,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "f = open('./data/day4a_test.txt', 'r')\n",
-    "data = f.read()\n",
-    "lines = data.split('\\n')\n",
-    "lines"
+    "raw_lines = data.split('\\n')\n",
+    "lines = []\n",
+    "map = {}\n",
+    "for i in range(len(raw_lines)):\n",
+    "    matches = re.findall(r'(\\d+)', raw_lines[i])\n",
+    "    c = tuple(int(j) for j in matches)\n",
+    "    if c[0] == c[2] or c[1] == c[3]:\n",
+    "        if c[0] != c[2]:\n",
+    "            for j in range(c[0], c[2]):\n",
+    "                key = '%d-%d' % (c[1], j)\n",
+    "                map[key] = 1 if key not in map.keys() else map[key] + 1\n",
+    "        elif c[1] != c[3]:\n",
+    "            for j in range(c[1], c[3]):\n",
+    "                key = '%d-%d' % (j, c[0])\n",
+    "                map[key] = 1 if key not in map.keys() else map[key] + 1\n",
+    "        else: # if start == end\n",
+    "            key = '%d-%d' % (c[0], c[1])\n",
+    "            map[key] = 1 if key not in map.keys() else map[key] + 1\n",
+    "            \n",
+    "map"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 133,
+   "id": "1cf07a84-4edf-4bb8-8e9d-87fad924ffa3",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2"
+      ]
+     },
+     "execution_count": 133,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "         \n",
+    "len([v for v in map.values() if v > 1])\n",
+    "\n",
+    "    "
    ]
   },
   {
@@ -60,325 +135,6 @@
    "outputs": [],
    "source": [
     "numbers = lines[0].split(',')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 51,
-   "id": "b83180ce-11bf-4249-98ae-bd3a1c866f60",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[[14 21 17 24  4]\n",
-      " [10 16 15  9 19]\n",
-      " [18  8 23 26 20]\n",
-      " [22 11 13  6  5]\n",
-      " [ 2  0 12  3  7]]\n"
-     ]
-    }
-   ],
-   "source": [
-    "# boards = data.split('\\n\\n')[1:]\n",
-    "boards = data.split('\\n\\n')[3:4]\n",
-    "for i in range(0, len(boards)):\n",
-    "    board = boards[i]\n",
-    "    rows = []\n",
-    "    r = board.split('\\n')\n",
-    "    for j in range(0, len(r)):\n",
-    "        rows.append(list(map(lambda x: int(x), r[j].split())))\n",
-    "    matrix = np.array(rows)\n",
-    "    print(matrix)\n",
-    "                "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 37,
-   "id": "6265cf1c-0254-452c-91e2-e06a79c9c782",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array(['14', '21', '17', '24', '4'], dtype='<U2')"
-      ]
-     },
-     "execution_count": 37,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "matrix = np.array(rows)\n",
-    "matrix[0]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 41,
-   "id": "e6e26409-9669-43d1-8ac6-9893f2450395",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(array([0]), array([1]))"
-      ]
-     },
-     "execution_count": 41,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "np.where(matrix == '21')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 69,
-   "id": "d204d8bb-41a4-4ccd-b010-8db5ce398f3a",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[array([14, 21, 17, 24,  4]),\n",
-       " array([14, 10, 18, 22,  2]),\n",
-       " array([10, 16, 15,  9, 19]),\n",
-       " array([21, 16,  8, 11,  0]),\n",
-       " array([18,  8, 23, 26, 20]),\n",
-       " array([17, 15, 23, 13, 12]),\n",
-       " array([22, 11, 13,  6,  5]),\n",
-       " array([24,  9, 26,  6,  3]),\n",
-       " array([ 2,  0, 12,  3,  7]),\n",
-       " array([ 4, 19, 20,  5,  7])]"
-      ]
-     },
-     "execution_count": 69,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "lines = []\n",
-    "for i in range(0, len(matrix)):\n",
-    "    lines.append(matrix[i])\n",
-    "    lines.append(matrix[:, i])\n",
-    "    \n",
-    "lines"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 46,
-   "id": "44a5c37c-6848-41a1-9275-0003c96b87e7",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array(['14', '17', '24', '4'], dtype='<U2')"
-      ]
-     },
-     "execution_count": 46,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "np.delete(lines[0], np.where(lines[0] == '21'))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 66,
-   "id": "db416bd6-584d-4615-893e-3bffcb1e70fa",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<class 'list'>\n",
-      "[1]\n",
-      "<class 'list'>\n",
-      "[1]\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "[2]"
-      ]
-     },
-     "execution_count": 66,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "a = list([1])\n",
-    "print(type(a))\n",
-    "print(a)\n",
-    "\n",
-    "b = [1]\n",
-    "print(type(b))\n",
-    "print(b)\n",
-    "\n",
-    "a[0] = 2\n",
-    "a"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 70,
-   "id": "fb015a31-8461-49de-bb54-b6d7575afb7e",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[array([14, 17, 24,  4]),\n",
-       " array([14, 10, 18, 22,  2]),\n",
-       " array([10, 16, 15,  9, 19]),\n",
-       " array([16,  8, 11,  0]),\n",
-       " array([18,  8, 23, 26, 20]),\n",
-       " array([17, 15, 23, 13, 12]),\n",
-       " array([22, 11, 13,  6,  5]),\n",
-       " array([24,  9, 26,  6,  3]),\n",
-       " array([ 2,  0, 12,  3,  7]),\n",
-       " array([ 4, 19, 20,  5,  7])]"
-      ]
-     },
-     "execution_count": 70,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "number = 21\n",
-    "\n",
-    "l = lines.copy()\n",
-    "\n",
-    "for i in range(len(l)):\n",
-    "    line = l[i]\n",
-    "    line = np.delete(line, np.where(line == number))\n",
-    "    l[i] = line\n",
-    "#     if not len(line):\n",
-    "\n",
-    "l"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 83,
-   "id": "2aa2278e-f6b6-4c57-a592-401bf26072d4",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[7,\n",
-       " 4,\n",
-       " 9,\n",
-       " 5,\n",
-       " 11,\n",
-       " 17,\n",
-       " 23,\n",
-       " 2,\n",
-       " 0,\n",
-       " 14,\n",
-       " 21,\n",
-       " 24,\n",
-       " 10,\n",
-       " 16,\n",
-       " 13,\n",
-       " 6,\n",
-       " 15,\n",
-       " 25,\n",
-       " 12,\n",
-       " 22,\n",
-       " 18,\n",
-       " 20,\n",
-       " 8,\n",
-       " 19,\n",
-       " 3,\n",
-       " 26,\n",
-       " 1]"
-      ]
-     },
-     "execution_count": 83,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "f = open('./data/day4a_test.txt', 'r')\n",
-    "data = f.read()\n",
-    "tmp = data.split('\\n\\n')\n",
-    "# numbers = list(map(lambda x: int(x), tmp[:1][0].split(',')))\n",
-    "numbers = [int(x) for x in tmp[:1][0].split(',')]\n",
-    "numbers"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 93,
-   "id": "bab23c57-74c8-4fcd-b249-e632445e78d4",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "numbers = lines[0].tolist()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 99,
-   "id": "97a8753c-6b06-4b37-bf34-268aeca564cf",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "80"
-      ]
-     },
-     "execution_count": 99,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "sum({numbers[i]: True for i in range(0, len(numbers))}.keys())"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 100,
-   "id": "86b48b03-447a-421a-a341-8128bc55f1e3",
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "TypeError",
-     "evalue": "list indices must be integers or slices, not list",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m/var/folders/mb/xqr44lqn1nv2_cy87gj4m2100000gn/T/ipykernel_16222/1731714147.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0mdi\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m2\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 4\u001b[0;31m \u001b[0;32mdel\u001b[0m \u001b[0ml\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mdi\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m: list indices must be integers or slices, not list"
-     ]
-    }
-   ],
-   "source": [
-    "l = [1,2,3,4]\n",
-    "di = [1,2]\n",
-    "\n",
-    "del l[di]"
    ]
   },
   {
